--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <section class="hero__container">
                 <div class="hero__text">
                     <h1 class="hero__title">WEB HTML CSS desde cero</h1>
-                    <h2 class="hero__subtitle">Creando web desde cero, principiante, si quieres dar algun consejo/ayuda, hablame en instagram @ogba o telegram @iimoncio.</h2>
+                    <h2 class="hero__subtitle">Creando web desde cero, principiante, si quieres dar algun consejo/ayuda, hablame en instagram @dyoz o telegram @Limoncio.</h2>
                     <a href="https://t.me/iimoncio" class="hero__cta">Contactame ahora</a>
                 </div>
             </section>
